[package]
name = "sim"
version = "0.1.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.18.1"
# this is necessary to automatically initialize the Python interpreter
features = ["auto-initialize"]